<resources>
    <string name="app_name">SampleMVP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Please_enter_your_username_ndpassword">กรุณากรอกชื่อผู้ใช้และรหัสผ่าน</string>
    <string name="Please_enter_username">กรุณากรอกชื่อผู้ใช้</string>
    <string name="Please_enter_password">กรุณากรอกรหัสผ่าน</string>
    <string name="username_or_password_NotPass">ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง</string>
    <string name="Product_category">หมวดหมู่สินค้า</string>
    <string name="Recorded_list">รายการที่บันทึก</string>
    <string name="Product_order_list">รายการสั้งชื้อสินค้า</string>
    <string name="profile">โปรไฟล์ส่วนตัว</string>
    <string name="Product_add">เพิ่มสินค้าแล้ว</string>
    <string name="Please_add_more_products">กรุณาเพิ่มจำนวนสินค้า</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="Forgot_password">ลืมรหัสผ่าน</string>
    <string name="deteils_product">รายละเอียดสินค้า</string>
    <string name="prie">4560</string>
    <string name="Basket">ตะกร้าสินค้า</string>
    <string name="Total_product_value">มูลค่าสินค้ารวม</string>
    <string name="bath">บาท</string>
    <string name="VAT">ภาษีมูลค่าเพิ่ม (VAT)</string>
    <string name="perser">%</string>
    <string name="basker_add">บันทึกรายการตะกร้า</string>
    <string name="prie_add_product">สั่งชื้อสินค้า</string>
    <string name="ok">ok</string>
    <string name="title_location_permission">title_location_permission</string>
    <string name="text_location_permission">text_location_permission</string>
    <string name="sum">ยอดสุทธิ</string>
    <string name="insert">บันทึก</string>
</resources>
