<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:fontFamily="@font/font_quark_bold"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/tvTitleUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:hint="@string/username"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/textColorBlack"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/lock" />

            <!--suppress AndroidUnknownAttribute -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:layout_marginLeft="10dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/textColorBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/font_quark_bold"
        android:gravity="right"
        android:text="@string/Forgot_password"
        android:textColor="@color/textColorBlack"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_bt_sles"
        android:fontFamily="@font/font_sv_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/textColorWhite"
        android:textSize="18sp" />


    </LinearLayout>
    <FrameLayout
        android:id="@+id/frem_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="1dp"
        android:visibility="gone">

        <include layout="@layout/item_progress" />

    </FrameLayout>
</RelativeLayout>