<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.basket.BasketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/ic_custom_toolbar_view"
            layout="@layout/custom_toolbar_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_basket_null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/textColorGray"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/group"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/textColorWhite"
            android:text="ไม่พบสินค้าในตะกร้า"
            android:textSize="40dp"
            android:fontFamily="@font/font_quark_lighr"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewBasket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/Total_product_value"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_prie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/prie"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/bath"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/shopping_cart" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ส่วนลดท้ายบิล(%)"
                        android:textColor="#6ED1CC"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(ลดราคายอดสุทธิทังหมด)"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="right">

                    <EditText
                        android:id="@+id/edt_discount_bas"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_customsearch"
                        android:gravity="center"
                        android:hint="0"
                        android:imeOptions="actionDone"
                        android:inputType="phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:text="%"
                        android:textSize="25dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/textColorGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/VAT"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edt_vat"
                    android:layout_width="70dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_customsearch"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionDone"
                    android:inputType="phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:text="@string/perser"
                    android:textSize="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/textColorGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/sum"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sumprie_totalvat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/prie"
                    android:textColor="#FF5D73"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/bath"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

            </LinearLayout>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:id="@+id/inser_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custome_bg_bt_basket"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_quark_bold"
                        android:text="@string/basker_add"
                        android:textColor="#6ED1CC"
                        android:textSize="25dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout

                android:id="@+id/buySalehub"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_bt_sles"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_quark_bold"
                    android:text="@string/prie_add_product"
                    android:gravity="center"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="25dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>